Fixade layout bugg, samma som inträffade i commit d247b63eb9e8f7abdf21bb9a782aa132be280fea. Denna lösning är nu applicerad på alla "scrolltables".

--- a/public/css/generic.css
+++ b/public/css/generic.css
@@ -259,7 +259,10 @@ textarea {
 
 }
 
-.scrolltbl .std_table thead{visibility:hidden;}
+.scrolltbl .std_table thead {
+	visibility: hidden;
+	height: 32px;
+}
 
 .onlyfive{max-height:177px;}
 
